# pdesolver

./: .gitignore  PDES.py  README.md  __init__.py  pyproject.toml
Auxs/: PDESEncoder.py  Visualize.py
Disc/: Disc.py
Solvers/: RKF.py  __init__.py  bdf2.py
Tests/: eqonda_prop.py  onda_impulso.py  pdes1.json  reacao1d_avancada copy.py  test_adveccao.py  test_burgers.py  test_calor.py  test_fitzhugh.py  test_load.py  test_reacao1d.py
docs/superpowers/plans/: 2026-06-10-curve-overlay.md
docs/superpowers/specs/: 2026-06-10-curve-overlay-design.md
frontend/src/state/: store.ts
frontend/src/styles/: globals.css
frontend/src/viz/: Plot1D.tsx  VizPanel.tsx
pdesolver/: PDE.py  PDES.py  __init__.py
pdesolver/Auxs/: FuncAux.py  PDESEncoder.py  Visualize.py  __init__.py
pdesolver/Disc/: Disc.py  __init__.py
pdesolver/Disc/boundaries/: __init__.py  boundary_base.py  dirichlet.py  neumann.py  periodic_example.py  robin.py
pdesolver/Solvers/: CN.py  RKF.py  __init__.py  solver_base.py  solver_base2.py
