[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdesolver"
version = "0.1.7"
description = "Symbolic PDE solver using finite difference discretization"
readme = {file = "README.md", content-type = "text/markdown"}
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["pde", "differential equations", "numerical methods", "finite differences", "solver"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.24",
    "sympy>=1.12",
    "matplotlib>=3.7",
    "scipy>=1.10",
]

[project.optional-dependencies]
gpu = ["cupy-cuda12x"]
dev = ["pytest>=7", "build", "twine"]

[project.urls]
Repository = "https://github.com/maiocacedo/PDESsolver"

[tool.setuptools.packages.find]
where = ["."]
include = ["pdesolver*"]
exclude = ["Tests*", "backend*"]

[tool.isort]
force_sort_within_sections = true
known_first_party = ["pdesolver"]
